[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemies/bullet_hell/bullet_spawner.gd" type="Script" id=1]


[node name="BulletSpawner" type="Spatial"]
script = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpawnContainer" type="Spatial" parent="."]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_end"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_end"]
